<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_farm"
        android:icon="@drawable/ic_farm"
        android:title="@string/nav_farm" />
    <item
        android:id="@+id/navigation_ai"
        android:icon="@drawable/ic_ai"
        android:title="@string/nav_ai" />
    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_alerts"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
